--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.16"
+  },
+  "devDependencies": {
+    "concurrently": "^7.1.0"
   }
 }
